# ridit-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.chglog/: config.yml
proto/: profile.proto  server.proto
src/: build.rs  main.rs
src/api/: mod.rs
src/api/config/: config.rs  configuration.rs  mod.rs  model.rs  server.rs
src/api/reddit/: repository.rs
src/api/reddit/models/: download_meta.rs  download_status.rs  error.rs  listing.rs  mod.rs
src/cli/: aspect_ratio.rs  download.rs  minimum_size.rs  mod.rs  print.rs  profile.rs  server.rs  start.rs  subreddit.rs
src/pkg/: mod.rs
src/server/: foreign_impl.rs  mod.rs  profile.rs  ridit.rs
