[package]
name = 'ridit'
version = '0.4.7'
edition = '2018'
[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
[target.x86_64-pc-windows-msvc]
rustflags = [
    '-C',
    'target-feature=+crt-static',
]

[target.x86_64-unknown-linux-musl]
rustflags = [
    '-C',
    'link-arg=-s',
]

[dependencies]
structopt = '0.3'
directories = '4.0'
toml = '0.5'
tokio-retry = '0.3'
imagesize = '0.9.0'
serde_json = '1.0'
linya = '0.2'

[dependencies.anyhow]
version = '1'
features = [
    'std',
    'backtrace',
]

[dependencies.reqwest]
version = '0.11'
features = [
    'json',
    'rustls-tls',
]
default-features = false

[dependencies.tokio]
version = '1.10'
features = ['full']

[dependencies.serde]
version = '1.0'
features = ['derive']
