[package]
name = 'ridit'
version = '0.4.7'
edition = '2018'
build = 'src/build.rs'

[dependencies]
structopt = '0.3'
directories = '4.0'
toml = '0.5'
tokio-retry = '0.3'
imagesize = '0.9.0'
serde_json = '1.0'
linya = '0.2'
atty = '0.2'
pad = '0.1.6'
tonic = '0.5'
prost = '0.8'

[dependencies.anyhow]
version = '1'
features = [
    'std',
    'backtrace',
]

[dependencies.reqwest]
version = '0.11'
features = [
    'json',
    'rustls-tls',
]
default-features = false

[dependencies.tokio]
version = '1.12'
features = ['full']

[dependencies.serde]
version = '1.0'
features = ['derive']

[build-dependencies]
tonic-build = '0.5'
