[package]
build = 'src/build.rs'
edition = '2018'
name = 'ridit'
version = '0.4.10'

[dependencies]
atty = '0.2'
chrono = '0.4'
directories = '4.0'
dirs = '4.0'
imagesize = '0.9.0'
linya = '0.2'
pad = '0.1.6'
prost = '0.8'
serde_json = '1.0'
structopt = '0.3'
tokio-retry = '0.3'
tokio-stream = '0.1'
toml = '0.5'
tonic = '0.5'
twox-hash = "1.6.1"
thiserror = "1.0.29"

[dependencies.anyhow]
features = [
  'std',
  'backtrace',
]
version = '1'

[dependencies.reqwest]
default-features = false
features = [
  'json',
  'rustls-tls',
]
version = '0.11'

[dependencies.tokio]
features = ['full']
version = '1.12'

[dependencies.serde]
features = ['derive']
version = '1.0'

[build-dependencies]
tonic-build = '0.5'
